--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My first website</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>This is a paragraph TEST</p>
-    </body>
+
+<head>
+  <title>My first website</title>
+  <meta> name="description" content="this is the content"
+</head>
+
+<body>
+  <h1>Hello world!</h1>
+  <h3>Hello Everybody</h3>
+  <p>This is a paragraph TEST</p>
+  <p>Testing 2</p>
+</body>
+
 </html>
