--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <title>My first website</title>
-  <meta> name="description" content="this is the content"
-</head>
-
-<body>
-  <h1>Hello world!</h1>
-  <h3>Hello Everybody</h3>
-  <p>This is a paragraph TEST</p>
-  <p>Testing 2</p>
-  <p>Testing 3</p>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Javascript</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+    <script src="/js/script.js"></script>
+  </body>
 </html>
